fix: overflow on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@ body {
 }
 
 .hero {
-  /* background: linear-gradient(to right, #a8c0ff, #3f2b96);  */
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/images/backdrop.jpg");
   min-height: 100vh;
   display: flex;
@@ -14,7 +13,6 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  width: 100%;
   align-items: center;
   justify-content: center;
   text-align: center;
